New ITs docker containers: hana exasol
- Add Blind bin and improve Blind bit on exasol
- Improve failsafe on hana
- Reduce theme menu flickering on linux
- Remove jdk11 build
- Sonar cleaning